--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,129 +17,197 @@
 
     </WebView>
 
-    <LinearLayout
-        android:id="@+id/relativeLayout"
+    <TabHost
+        android:id="@+id/tabHost"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/note_button_shelf_height"
-        android:background="@color/lightlightgray"
-        android:orientation="vertical"
+        android:layout_height="144dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/note_button_width"
-            android:layout_weight="2"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:background="@color/lightlightgray"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="1"></View>
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                app:layout_constraintStart_toStartOf="parent"></TabWidget>
 
-            <Button
-                android:id="@+id/button_w"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_w" />
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@android:id/tabs"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button_e"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_e" />
+                <LinearLayout
+                    android:id="@+id/tab1"
+                    android:layout_width="match_parent"
+                    android:layout_height="96dp"
+                    android:orientation="vertical">
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"></View>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/note_button_width"
+                        android:layout_weight="2"
+                        android:gravity="center">
 
-            <Button
-                android:id="@+id/button_t"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_t" />
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="1"></View>
 
-            <Button
-                android:id="@+id/button_y"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_y" />
+                        <Button
+                            android:id="@+id/button_w"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_w" />
 
-            <Button
-                android:id="@+id/button_u"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_u" />
+                        <Button
+                            android:id="@+id/button_e"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_e" />
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="1"></View>
-        </LinearLayout>
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"></View>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/note_button_width"
-            android:gravity="center"
-            android:layout_weight="1">
+                        <Button
+                            android:id="@+id/button_t"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_t" />
 
-            <Button
-                android:id="@+id/button_a"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_a" />
+                        <Button
+                            android:id="@+id/button_y"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_y" />
 
-            <Button
-                android:id="@+id/button_s"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_s" />
+                        <Button
+                            android:id="@+id/button_u"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_u" />
 
-            <Button
-                android:id="@+id/button_d"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_d" />
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="1"></View>
+                    </LinearLayout>
 
-            <Button
-                android:id="@+id/button_f"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_f" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/note_button_width"
+                        android:layout_weight="1"
+                        android:gravity="center">
 
-            <Button
-                android:id="@+id/button_g"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_g" />
+                        <Button
+                            android:id="@+id/button_a"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_a" />
 
-            <Button
-                android:id="@+id/button_h"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_h" />
+                        <Button
+                            android:id="@+id/button_s"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_s" />
 
-            <Button
-                android:id="@+id/button_j"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/note_button_width"
-                android:layout_weight="2"
-                android:text="@string/note_j" />
-        </LinearLayout>
-    </LinearLayout>
+                        <Button
+                            android:id="@+id/button_d"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_d" />
+
+                        <Button
+                            android:id="@+id/button_f"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_f" />
+
+                        <Button
+                            android:id="@+id/button_g"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_g" />
+
+                        <Button
+                            android:id="@+id/button_h"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_h" />
+
+                        <Button
+                            android:id="@+id/button_j"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/note_button_width"
+                            android:layout_weight="2"
+                            android:text="@string/note_j" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tab2"
+                    android:layout_width="match_parent"
+                    android:layout_height="96dp"
+                    android:orientation="vertical">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/note_button_width">
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/button_select_midi_file" />
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/button_play" />
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/button_stop" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/note_button_width">
+
+                        <TextView
+                            android:id="@+id/message"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </FrameLayout>
+        </RelativeLayout>
+    </TabHost>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
