--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,10 +200,16 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/note_button_width">
+                        android:layout_height="@dimen/note_button_width"
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/message"
+                            android:id="@+id/filePath"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:id="@+id/duration"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
